// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Plural' 2`] = `
"Water + Water = Lake
Fire + Water = Steam
Fire + Steam = Engine
Earth + Water = Plant
Engine + Plant = Car
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Wind = Dust
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Wind = Dust
Water + Wind = Wave
Earth + Wave = Sand
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Fire + Water = Steam
Steam + Wave = Surf
Surf + Wind = Surfing
Surfing + Wind = Kite
Dust + Water = Mud
Fire + Mud = Brick
Fire + Steam = Engine
Engine + Steam = Train
Brick + Train = Wall
Earth + Wall = Fence
Fence + Wall = Prison
Kite + Prison = Jailbird
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
Water + Water = Lake
Lake + Plant = Lily
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Lake = America
Plant + Steam = Tea
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Fire + Wind = Smoke
Dust + Earth = Planet
Fire + Planet = Sun
Sun + Wind = Sunflower
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
File + File Type = File Extension
Anteater + File Extension = .a
Earth + Message = Letter
Letter + Sunflower = A
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dragon + Dust = Dragonfly
Dragonfly + Earth = Ant
Dandelion + Dandelion = Dandelion Patch
Engine + Plant = Car
Car + Earth = Tire
Dandelion Patch + Tire = Flat Tire
Earth + Flat Tire = Puncture
Earth + Earth = Mountain
Lake + Mountain = Fjord
Fjord + Water = Whale
Dust + Whale = Sperm
Puncture + Sperm = Punctuation
Ant + Punctuation = Apostrophe
A + Apostrophe = A’
A + Fire = B
Apostrophe + B = B’
A’ + B’ = C’
C’ + C’ = C”
Fire + Sand = Glass
Fire + Glass = Lens
Lens + Water = Microscope
Earth + Microscope = Bacteria
Glass + Wind = Window
Wind + Window = Curtain
Curtain + Smoke = Magic
Magic + Smoke = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Colon + Opposite = Semicolon
C” + Semicolon = “;”
.a + “;” = “a;”
.a + “a;” = “a”
.a + Fire = .b
.a + .b = .c
.c + “;” = “c”
“c” + “c” = “cc”
“a” + “cc” = “ace”
Car + Island = Parking
Lake + Parking = Lot
Lot + Opposite = Not
Lily + Water = Pond
Pond + Wine = Punch
Not + Punch = Hug
Hug + Not = Honey
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
“ace” + Ace Of Spades = “one”
Earth + Punctuation = Period
“one” + Period = “1”
Earth + Fire = Lava
Lava + Water = Stone
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
Dandelion + Plant = Weed
Weed + Wine = Hangover
Smoke + Sun = Eclipse
Eclipse + Smoke = Vampire
Vampire + Weed = Count
Count + Count = Number
Hangover + Number = 1
1 + Count = Two
Negative + Two = -2
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
-2 + Sign = -
Ocean + Water = Fish
Fish + Wind = Flying Fish
Flying Fish + Wind = Airplane
Airplane + Fire = Crash
Brick + Mud = Adobe
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
.b + .c = .d
.c + .d = .e
.d + .e = .f
Wind + Wind = Tornado
Eclipse + Eclipse = Black Hole
Earth + River = Delta
.e + .f = .g
_ + .g = _g
Paper + Plant = Book
Letter + Letter = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Apostrophe + Quote = Quotation Mark
_ + Quotation Mark = "
_g + " = _g.split("");
Tornado + Tornado = Hurricane
Hurricane + Semicolon = Hurricane;
_g.split(""); + Hurricane; = " ";
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Number + X = Roman Numeral
Mountain + Roman Numeral = M
Lily + Wind = Flower
Car + Flower = Carnation
Carnation + Tea = T
M + T = E
" "; + E = "E"
Fire + Microscope = Virus
Glass + Virus = Computer
Computer + Fire = Hack
Earth + Obsidian = Diamond
Mountain + Sand = Pyramid
Pyramid + Water = Tomb
Diamond + Tomb = Tomb Raider
Hack + Tomb Raider = Hack and Slash
Sand + Water = Beach
Beach + Sun = Vacation
Mountain + Vacation = Retreat
Engine + Retreat = Reverse
Hack and Slash + Reverse = Backslash
_ + Backslash = \\
A + Punctuation = Ampersand
A + Plant = Apple
Lens + Pyramid = Eye
Apple + Eye = I
I + Tree = It
Water + Wine = Holy Water
Dust + Holy Water = Angel
Car + Car = Truck
Angel + Truck = UPS
UPS + UPS = Up
It + Up = Put
Ampersand + Put = & Put
Apostrophe + UPS = Apostrophe S
& Put + Apostrophe S = Puts
Plant + Smoke = Incense
Incense + Smoke = Prayer
Fire + Prayer = Candle
Candle + Plant = Oxygen
Oxygen + Water = Hydrogen
Dandelion + Hydrogen = Helium
Helium + T = The
Apostrophe + The = The’
Map + The’ = Them
Puts + Them = Put Them
Mountain + Mountain = Mountain Range
Water + Weed = Bong
Bong + Mountain Range = Smoky Mountains
Mountain Range + Smoky Mountains = Appalachian Mountains
Appalachian Mountains + Water = Appalachian Trail
Appalachian Trail + Dandelion = Thru-Hiker
Appalachian Mountains + Thru-Hiker = AT
AT + The’ = That
Put Them + That = Put That
That + That = This
Put That + This = Put This
& Put + B = Putin
Apostrophe + It = It’s
Not + Quotation Mark = Quotation
It’s + Quotation = Quotation Marks
Putin + Quotation Marks = Putin Quotes
Putin Quotes + Quotation = Putin Quotation
Putin Quotation + Quotation Marks = Putin Quotation Marks
Put This + Putin Quotation Marks = Put This In Quotation Marks
Put This In Quotation Marks + Puts = Puts This In Quotation Marks
\\ + Puts This In Quotation Marks = “\\”
Train + Wind = Zephyr
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Wind + X = Y
Upsilon + Y = U
" "; + U = "U"
“\\” + "U" = “u\\”
“u\\” + Reverse = “n”
"E" + “n” = “en”
.b + .b = .bb
.b + .f = .s
.bb + .s = .bbs
.bbs + Steam = .bss
.bbs + .bss = .o
.o + “;” = “o”
“;” + “;” = “:”
Phoenix + Water = Ash
Ash + Tree = Pencil
Book + Pencil = Homework
Homework + Tornado = F
A + F = G
A + G = H
“:” + H = H:
“;” + H: = “H”
Pencil + Tornado = Pencil Sharpener
F + Pencil Sharpener = P
“H” + P = Ph
“o” + Ph = Pho
“en” + Pho = Phoen
“1” + Phoen = Phone
Fire + Phone = Call
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2024-10-18.json savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Plant = Book
Earth + River = Delta
Book + Delta = Alphabet
Alphabet + Earth = Planet
Planet + Planet = Star
Star + Wind = Comet
Water + Water = Lake
Earth + Lake = Swamp
Paper + Swamp = Money
Comet + Money = Bitcoin
Earth + Planet = Moon
Lake + Money = Fish
Fire + Water = Steam
Fire + Steam = Engine
Engine + Engine = Rocket
Fish + Rocket = Space Fish
Engine + Wind = Windmill
Space Fish + Windmill = Wind Fish
Moon + Wind Fish = Link
Earth + Wind = Dust
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Black Hole + Earth = Hole
Paper + Wind = Kite
Hole + Kite = Pocket
Pocket + Pocket = Pants
Pants + Pants = Shorts
Earth + Fire = Lava
Lava + Water = Stone
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Fire + Fire = Volcano
Obsidian + Volcano = Glass
Fire + Glass = Lens
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
Plant + Wind = Dandelion
Dandelion + Water = Wine
Fire + Wine = Alcohol
Alcohol + Wind = Hangover
Fire + Moon = Eclipse
Fire + Wind = Smoke
Eclipse + Smoke = Vampire
Dandelion + Plant = Weed
Vampire + Weed = Count
Count + Count = Number
Hangover + Number = 1
1 + Count = Two
Negative + Two = -2
Water + Wind = Wave
Earth + Wave = Sand
Sand + Wine = Sandwich
Glass + Wind = Window
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
-2 + Sign = -
Fish + Wind = Flying Fish
Flying Fish + Wind = Airplane
Airplane + Fire = Crash
Dust + Lake = Mud
Fire + Mud = Brick
Brick + Mud = Adobe
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Engine + Steam = Train
Brick + Train = Wall
Earth + Wall = Fence
Fence + Wall = Prison
Kite + Prison = Jailbird
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
Lake + Plant = Lily
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Lake = America
Plant + Steam = Tea
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Fire + Planet = Sun
Sun + Wind = Sunflower
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Island + Wave = Surf
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
File + File Type = File Extension
Anteater + File Extension = .a
.a + Fire = .b
.a + .b = .c
.b + .c = .d
.c + .d = .e
.d + .e = .f
Earth + Earth = Mountain
Wind + Wind = Tornado
Engine + Plant = Car
Car + Island = Parking
Lake + Parking = Lot
Fire + Swamp = Dragon
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
.e + .f = .g
_ + .g = _g
Dragon + Dust = Dragonfly
Dragonfly + Earth = Ant
Dandelion + Dandelion = Dandelion Patch
Car + Earth = Tire
Dandelion Patch + Tire = Flat Tire
Earth + Flat Tire = Puncture
Lake + Mountain = Fjord
Fjord + Water = Whale
Dust + Whale = Sperm
Puncture + Sperm = Punctuation
Ant + Punctuation = Apostrophe
Alphabet + Alphabet = Word
Word + Word = Sentence
Sentence + Wind = Phrase
Book + Phrase = Quote
Apostrophe + Quote = Quotation Mark
_ + Quotation Mark = "
_g + " = _g.split("");
Tornado + Tornado = Hurricane
Lens + Water = Microscope
Earth + Microscope = Bacteria
Dandelion + Tree = Wish
Money + Wish = Genie
Bacteria + Genie = E. Coli
E. Coli + Water = Diarrhea
Diarrhea + E. Coli = Colon
Colon + Opposite = Semicolon
Hurricane + Semicolon = Hurricane;
_g.split(""); + Hurricane; = " ";
Lily + Wind = Flower
Car + Flower = Carnation
Carnation + Tea = T
" "; + T = "T"
Wave + Wind = Storm
Island + Storm = Shipwreck
Shipwreck + Tornado = Pirate
Fjord + Tornado = Tsunami
Steam + Tsunami = Titanic
Pirate + Titanic = Jack
Jack + Water = Jack Daniels
Jack Daniels + Train = Trainwreck
Jack Daniels + Trainwreck = You
"T" + You = Tube
Tube + You = YouTube
Mountain + Mountain = Mountain Range
Swamp + Swamp = Bog
Stone + Water = Rock
Bog + Rock = Peat
Peat + Peat = Peat Bog
Mountain Range + Peat Bog = Moor
Moor + Not = More
More + YouTube = Youtube Red
YouTube + Youtube Red = Youtube Premium
Shorts + Youtube Premium = Youtube Shorts
Link + Youtube Shorts = Link Shorts
Bitcoin + Link Shorts = Bitly
Bitly + Link = Short
Alphabet + Short = Acronym"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Plural' 2`] = `
"Water + Water = Lake
Fire + Water = Steam
Fire + Steam = Engine
Earth + Water = Plant
Engine + Plant = Car
Lake + Water = Ocean
Earth + Ocean = Island
Car + Island = Parking
Lake + Parking = Lot
Earth + Wind = Dust
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dust + Fire = Ash
Ash + Fire = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
Dust + Engine = Vacuum
Fire + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Detective' 2`] = `
"Earth + Wind = Dust
Water + Wind = Wave
Earth + Wave = Sand
Earth + Water = Plant
Plant + Wind = Dandelion
Dandelion + Water = Wine
Sand + Wine = Sandwich
Sandwich + Wine = Picnic
Dust + Picnic = Ants
Ants + Water = Anteater
Fire + Water = Steam
Steam + Wave = Surf
Surf + Wind = Surfing
Surfing + Wind = Kite
Dust + Water = Mud
Fire + Mud = Brick
Fire + Steam = Engine
Engine + Steam = Train
Brick + Train = Wall
Earth + Wall = Fence
Fence + Wall = Prison
Kite + Prison = Jailbird
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Sand = Sandpaper
Jailbird + Sandpaper = File
Water + Water = Lake
Lake + Plant = Lily
Lake + Water = Ocean
Earth + Ocean = Island
Earth + Island = Continent
Continent + Lake = America
Plant + Steam = Tea
America + Tea = Taxes
Lily + Taxes = Filing
Filing + Island = File Island
Fire + Wind = Smoke
Dust + Earth = Planet
Fire + Planet = Sun
Sun + Wind = Sunflower
Smoke + Sunflower = Smoke Signal
Smoke Signal + Wind = Message
Message + Surf = Text
Text + Water = Font
Font + Text = Type
File Island + Type = File Type
File + File Type = File Extension
Anteater + File Extension = .a
Earth + Message = Letter
Letter + Sunflower = A
Earth + Lake = Swamp
Fire + Swamp = Dragon
Dragon + Dust = Dragonfly
Dragonfly + Earth = Ant
Dandelion + Dandelion = Dandelion Patch
Engine + Plant = Car
Car + Earth = Tire
Dandelion Patch + Tire = Flat Tire
Earth + Flat Tire = Puncture
Earth + Earth = Mountain
Lake + Mountain = Fjord
Fjord + Water = Whale
Dust + Whale = Sperm
Puncture + Sperm = Punctuation
Ant + Punctuation = Apostrophe
A + Apostrophe = A’
A + Fire = B
Apostrophe + B = B’
A’ + B’ = C’
C’ + C’ = C”
Punctuation + Wind = Comma
Earth + Punctuation = Period
Comma + Period = Semicolon
C” + Semicolon = “;”
.a + “;” = “a;”
.a + “a;” = “a”
.a + Fire = .b
.a + .b = .c
.c + “;” = “c”
“c” + “c” = “cc”
“a” + “cc” = “ace”
Dust + Plant = Pollen
Pollen + Water = Honey
River + Tea = Tea Party
Tea + Tea Party = Mad Hatter
Honey + Mad Hatter = Queen of Hearts
Fire + Queen of Hearts = Ace Of Spades
“ace” + Ace Of Spades = “one”
“one” + Period = “1”
Earth + Fire = Lava
Lava + Water = Stone
Lava + Stone = Obsidian
Lake + Obsidian = Mirror
Mirror + Obsidian = Black
Fire + Sand = Glass
Fire + Glass = Lens
Lens + Steam = Camera
Camera + Earth = Photographer
Black + Photographer = Negative
Dandelion + Plant = Weed
Weed + Wine = Hangover
Smoke + Sun = Eclipse
Eclipse + Smoke = Vampire
Vampire + Weed = Count
Count + Count = Number
Hangover + Number = 1
1 + Count = Two
Negative + Two = -2
Glass + Wind = Window
Sandwich + Window = Sandwich Board
Lake + Sandwich Board = Sign
-2 + Sign = -
Ocean + Water = Fish
Fish + Wind = Flying Fish
Flying Fish + Wind = Airplane
Airplane + Fire = Crash
Brick + Mud = Adobe
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Adobe + Steamboat = Adobe Flash
Adobe Flash + Steam = Game
Crash + Game = Over
Earth + Over = Under
Lens + Under = Underscore
- + Underscore = _
.b + .c = .d
.c + .d = .e
.d + .e = .f
Wind + Wind = Tornado
Eclipse + Eclipse = Black Hole
Earth + River = Delta
Car + Island = Parking
Lake + Parking = Lot
Fire + Lily = Phoenix
Dragon + Phoenix = Yin Yang
Wind + Yin Yang = Feng Shui
Dust + Feng Shui = Dust Bunny
Dust Bunny + Yin Yang = Opposite
Lot + Opposite = Not
.e + .f = .g
_ + .g = _g
Apostrophe + Comma = Quotation Mark
_ + Quotation Mark = "
_g + " = _g.split("");
Tornado + Tornado = Hurricane
Hurricane + Semicolon = Hurricane;
_g.split(""); + Hurricane; = " ";
Earth + Paper = Map
Map + Water = Treasure
Map + Treasure = X
Number + X = Roman Numeral
Mountain + Roman Numeral = M
Lily + Wind = Flower
Car + Flower = Carnation
Carnation + Tea = T
M + T = E
" "; + E = "E"
Water + Wine = Holy Water
Dust + Holy Water = Angel
Car + Car = Truck
Angel + Truck = UPS
Train + Wind = Zephyr
Delta + Zephyr = Zeta
UPS + Zeta = Upsilon
Wind + X = Y
Upsilon + Y = U
File Extension + U = .U
.U + Not = .n
.n + “;” = “n”
"E" + “n” = “en”
.b + .b = .bb
.b + .f = .s
.bb + .s = .bbs
.bbs + Steam = .bss
.bbs + .bss = .o
.o + “;” = “o”
Dust + Wine = Vinegar
Vinegar + Vinegar = Acid
Acid + River = PH
PH + PH = Ph
“o” + Ph = Pho
“en” + Pho = Phoen
“1” + Phoen = Phone
Fire + Phone = Call
Black Hole + Tornado = Singularity
Not + Singularity = Plural
Call + Plural = Calls
Lily + Window = Monocle
Hangover + Plant = Aspirin
Aspirin + Wind = Sneeze
Monocle + Sneeze = Inspector
Calls + Inspector = Detective"
`;

exports[`generateLineage 2025-04-04.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Earth + Water = Plant
Earth + Plant = Tree
Tree + Water = River
River + Tree = Paper
Paper + Plant = Book
Earth + River = Delta
Book + Delta = Alphabet
Plant + Wind = Dandelion
Fire + Wind = Smoke
Smoke + Water = Fog
Dandelion + Fog = Fairy
Earth + Fairy = Gnome
Earth + Gnome = Dwarf
Water + Wind = Wave
Water + Wave = Tsunami
Fire + Fire = Volcano
Tsunami + Volcano = Earthquake
Earthquake + Gnome = Goblin
Earthquake + Goblin = Troll
Troll + Water = Bridge
Earth + Wind = Dust
Dust + Water = Mud
Fire + Mud = Brick
Fire + Water = Steam
Brick + Steam = Steam Engine
Steam Engine + Water = Steamboat
Fire + Volcano = Lava
Lava + Water = Stone
Stone + Stone = Boulder
Boulder + Water = Waterfall
Steamboat + Waterfall = Niagara Falls
Bridge + Niagara Falls = Honeymoon
Dwarf + Honeymoon = Short
Alphabet + Short = Acronym"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Plural' 2`] = `
"Water + Water = Lake
Lake + Water = Ocean
Earth + Ocean = Island
Island + Island = Continent
Water + Wind = Wave
Island + Wave = Surf
Continent + Surf = Australia
Earth + Earth = Mountain
Mountain + Wind = Avalanche
Avalanche + Wind = Snow
Australia + Snow = No
No + Ocean = Not
Earth + Wind = Dust
Fire + Water = Steam
Fire + Steam = Engine
Dust + Engine = Vacuum
Vacuum + Vacuum = Black Hole
Wind + Wind = Tornado
Black Hole + Tornado = Singularity
Not + Singularity = Plural"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Detective' 2`] = `
"Water + Wind = Wave
Earth + Wave = Sand
Fire + Sand = Glass
Fire + Glass = Lens
Fire + Lens = Magnifying Glass
Earth + Wind = Dust
Dust + Fire = Ash
Ash + Glass = Vase
Magnifying Glass + Vase = Evidence
Evidence + Magnifying Glass = Detective"
`;

exports[`generateLineage catstone-2026-06-06.ic savefile should generate a lineage for 'Acronym' 2`] = `
"Wind + Wind = Tornado
Earth + Water = Plant
Earth + Plant = Tree
Tornado + Tree = Wood
Water + Wood = Paper
Paper + Tree = Book
Tree + Water = River
Earth + River = Delta
Book + Delta = Alphabet
Earth + Fire = Lava
Lava + Water = Stone
Fire + Water = Steam
Water + Wind = Wave
Steam + Wave = Surf
Surf + Wind = Surfing
Stone + Surfing = Skimming
Book + Skimming = Summary
Alphabet + Summary = Abbreviation
Abbreviation + Alphabet = Acronym"
`;
